--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -8,6 +8,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest",
+    "type-check": "tsc --noEmit",
     "build:ios": "eas build --platform ios",
     "build:android": "eas build --platform android"
   },
@@ -17,18 +18,24 @@
     "react": "18.3.1",
     "react-native": "0.76.2",
     "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "react-native-screens": "~3.35.0",
     "react-native-safe-area-context": "4.12.0",
     "expo-notifications": "~0.29.0",
     "expo-sqlite": "~14.0.0",
     "@supabase/supabase-js": "^2.38.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "zustand": "^4.4.0",
     "@tanstack/react-query": "^5.0.0",
     "nativewind": "^2.0.11",
     "react-native-calendars": "^1.1302.0",
     "expo-linking": "~7.0.0",
-    "expo-constants": "~17.0.0"
+    "expo-constants": "~17.0.0",
+    "date-fns": "^2.30.0",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-svg": "15.8.0",
+    "@expo/vector-icons": "^14.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -36,6 +43,7 @@
     "@types/react-native": "~0.73.0",
     "typescript": "^5.1.3",
     "jest": "^29.2.1",
+    "jest-expo": "~52.0.0",
     "@testing-library/react-native": "^12.3.0",
     "@testing-library/jest-native": "^5.4.3"
   },
